# HEU-Gobang-Platform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.h  last.names
AI/: DFS.c  GetValuableBlank.c  countUnit.c  evaluateGobalScore.c  getValuableBlank.c  judgeStatus.c  readBoard.c  writeBoard.c
ConsoleGUI/: gui.c
src/: GUI-main.c  base.h  console-main.c
src/AI/: AI.h  DFS.c  countUnit.c  evaluateGobalScore.c  getValuableBlank.c  judgeStatus.c
src/ConsoleGUI/: gui.c  gui.h
